[gd_scene load_steps=6 format=3 uid="uid://b3oesmcbna55s"]

[ext_resource type="Script" path="res://Scenes/PauseMenu/pause_menu.gd" id="1_07wlw"]
[ext_resource type="Texture2D" uid="uid://d2gwn4apfgvvj" path="res://Assets/text.png" id="2_tio23"]
[ext_resource type="FontFile" uid="uid://53yiorauim7c" path="res://Assets/Font/Arvo-Bold.ttf" id="3_i146m"]
[ext_resource type="FontFile" uid="uid://dpij2clfuqdep" path="res://Assets/Font/Arvo-Regular.ttf" id="4_klom5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qo0ru"]
atlas = ExtResource("2_tio23")
region = Rect2(0, 768, 1024, 256)

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_07wlw")

[node name="TextureRect" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -350.0
offset_right = 300.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -215.0
offset_right = 150.0
offset_bottom = 215.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="CenterContainer" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/CenterContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_qo0ru")
expand_mode = 5

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 15
theme_override_constants/margin_bottom = 15

[node name="CenterContainer2" type="PanelContainer" parent="VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer2/CenterContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ToMenuButton" type="Button" parent="VBoxContainer/MarginContainer2/CenterContainer2/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_i146m")
theme_override_font_sizes/font_size = 25
text = "BACK TO MENU"

[node name="CenterContainer3" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer3/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("4_klom5")
theme_override_font_sizes/font_size = 25
text = "Music Volume"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/CenterContainer3/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="MusicVolSlider" type="HSlider" parent="VBoxContainer/CenterContainer3/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.001

[node name="CenterContainer5" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer5"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer5/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("4_klom5")
theme_override_font_sizes/font_size = 25
text = "SFX Volume"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/CenterContainer5/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="SFXVolSlider" type="HSlider" parent="VBoxContainer/CenterContainer5/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.001

[node name="CenterContainer4" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer4"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer4/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("4_klom5")
theme_override_font_sizes/font_size = 25
text = "Game Speed: 100%"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/CenterContainer4/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="GameSpeedSlider" type="HSlider" parent="VBoxContainer/CenterContainer4/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
min_value = 50.0
max_value = 250.0
step = 50.0
value = 100.0

[connection signal="button_down" from="VBoxContainer/MarginContainer2/CenterContainer2/MarginContainer/ToMenuButton" to="." method="_on_to_menu_button_button_down"]
[connection signal="value_changed" from="VBoxContainer/CenterContainer3/VBoxContainer/MarginContainer/MusicVolSlider" to="." method="_on_music_vol_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/CenterContainer5/VBoxContainer/MarginContainer/SFXVolSlider" to="." method="_on_sfx_vol_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/CenterContainer4/VBoxContainer/MarginContainer/GameSpeedSlider" to="." method="_on_game_speed_slider_value_changed"]
